--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="immersive_sys_ui">#33000000</color>
+
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorAccent">#1da1f2</color>
+
 </resources>
